--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,18 +4,18 @@ layout: default
 
 <section id="content">
   <article class="post">
-    <header>
-      <h2>{{ page.title }}</h2><span>{{ page.date | date_to_string }}</span> &raquo;
+    <header class="post-title">
+      <h2 class="post-title">{{ page.title }}</h2><span>{{ page.date | date_to_string }}</span> &raquo;
     </header>
     <div class="post-content"> {{ content }}</div>
   </article>
 </section>
 
-<section id="related">
+<aside id="related">
   <h2>Related Posts</h2>
-  <ul class="posts">
+  <ul class="posts-list">
     {% for post in site.related_posts limit:3 %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
-</section>
+</aside>
