--- a/css/screen.css
+++ b/css/screen.css
@@ -162,6 +162,9 @@ article span {
     font-weight:bold;
     color: #245476;
   }
+  h2.post-title {
+    font-size: 1.5em;
+  }
   .post .post-title a {
     text-decoration: none;
   }
