--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,14 +13,12 @@
 <meta http-equiv="Expires" content="Sat, 12 Jul 2014 08:25:51 GMT" />
 <meta http-equiv="Last-Modified" content="Mon, 30 Jun 2014 15:03:35 GMT"/>
 <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=UTF-8" />
-<link rel="alternate" type="application/rss+xml" title="Blog-notes au format RSS 2.0" href="//rss.xml" />
-<link rel="alternate" type="application/atom+xml" title="Blog-notes au format Atom 1.0" href="//atom.xml" />
+<!-- link rel="alternate" type="application/rss+xml" title="Blog-notes au format RSS 2.0" href="/rss.xml" / -->
+<link rel="alternate" type="application/atom+xml" title="Blog-notes au format Atom 1.0" href="/atom.xml" />
 <link rel="icon" type="image/png" href="http://medias.jbfavre.org/moi.png" />
    <!-- syntax highlighting CSS -->
-   <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
-   <!-- Homepage CSS -->
-   <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
-<title>{{ page.title }}</title>
+   <link rel="stylesheet" href="{% minified_css_file %}" type="text/css" />
+<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 </head>
 <body class="site">
   <header id="header">
