--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,15 +5,28 @@ layout: default
 <section id="content">
   <article class="post">
     <header class="post-title">
-      <h2 class="post-title">{{ page.title }}</h2><span>{{ page.date | date_to_string }}</span> &raquo;
+      <span class="post-date">{{ page.date | date_to_string }}</span>
+      <h2 class="post-title"><a class="post-title" href="{{ page.url }}">{{ page.title }}</a></h2>
+      <aside class="post-meta">
+        <ul>
+        {% if page.category != nil %}
+          <li>&raquo; <a href="{{ site.base_url }}/{{ page.category | downcase }}">{{ page.category }}</a> &laquo;</li>
+        {% endif %}
+        {% if page.tags.size != 0 %}
+          <li>&nbsp;( {{ page.tags | join: ', ' }} )</li>
+        {% endif %}
+        </ul>
+      </aside>
     </header>
-    <div class="post-content"> {{ content }}</div>
+    <section class="post-content">
+    {{ content }}
+    </section>
   </article>
 </section>
 
 <aside id="related">
   <h2>Related Posts</h2>
-  <ul class="posts-list">
+  <ul class="aside-list">
     {% for post in site.related_posts limit:3 %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
