--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,67 +1,56 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr">
-<head>
-<meta name="verify-v1" content="cfM+BxZ/os8cme0oIVd46OIwqyXUsorha7mssfQtQ4k=" />
-<meta name="robots" content="all,index,follow" />
-<meta name="DC.title" content="{{ page.title }}" />
-<meta name="DC.Creator" content="" />
-<meta name="DC.Description" content="Le meilleur du pire de mes flux RSS (et de Twitter): PSES2014: ELK - Elasticsearch, Logstash &amp; Kibana" />
-<meta name="DC.Language" content="fr" />
-<meta name="DC.Publisher" content="Jean Baptiste Favre"/>
-<meta name="description" content="Le meilleur du pire de mes flux RSS (et de Twitter): PSES2014: ELK - Elasticsearch, Logstash &amp; Kibana" />
-<meta name="Robots" content="index, follow" />
-<meta http-equiv="Expires" content="Sat, 12 Jul 2014 08:25:51 GMT" />
-<meta http-equiv="Last-Modified" content="Mon, 30 Jun 2014 15:03:35 GMT"/>
-<meta http-equiv="Content-Type" content="application/xhtml+xml; charset=UTF-8" />
-<!-- link rel="alternate" type="application/rss+xml" title="Blog-notes au format RSS 2.0" href="/rss.xml" / -->
-<link rel="alternate" type="application/atom+xml" title="Blog-notes au format Atom 1.0" href="{% page_feed_url %}" />
-<link rel="icon" type="image/png" href="http://medias.jbfavre.org/moi.png" />
-   <!-- syntax highlighting CSS -->
-   <link rel="stylesheet" href="{% minified_css_file %}" type="text/css" />
-<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+<!DOCTYPE html>
+<html>
+<head>   
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+
+    <title>{{ site.name }} - {{ site.description }}</title>
+    <meta name="description" content="{{ site.meta_description}}" />
+
+    <meta name="HandheldFriendly" content="True" />
+    <meta name="MobileOptimized" content="320" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" type="text/css" href="/assets/css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/screen.css" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic|Open+Sans:700,400" />
+    <!-- This is for syntax highlight -->
+    <link rel="stylesheet" type="text/css" href="/assets/css/syntax.css">
+    <!-- Customisation  -->
+    <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
+
 </head>
-<body class="site">
-  <header id="header">
-    <h1 class="title"><a href="/">Mon Blog-notes à moi que j'ai</a>
-    <span>Le meilleur du pire de mes flux RSS (et de Twitter)</span></h1>
-  </header><!-- fin header -->
+<body class="home-template">
 
-  {{ content }}
+    
+    {{ content }}
 
-  <aside id="category">
-    <h2>Categories</h2>
-    <ul>
-    {% for category in site.categories %}
-      <li><a href="{{ site.base_url }}/categories/{{ category | first }}/">{{ category | first }}</a> ({{ category | last | size }})</li>
-    {% endfor %}
-    </ul>
-  </aside>
-  <footer class="footer">
-    <section class="contact">
-      <ul>
-	  <li><a href="{{ site.owner.url }}" title="{{ site.owner.name }}">{{ site.owner.name }}</a></li>
-          <li>{{ site.owner.position }}</li>
-          <li>Currently @ {{ site.owner.company }}</li>
-      </ul>
-    </section>
-    <section class="contact">
-      <ul>
-      {% if site.owner.github %}
-        <li><a href="//github.com/{{ site.owner.github }}/">github.com/{{ site.owner.github }}</a></li>
-      {% endif %}
-      {% if site.owner.twitter %}
-        <li><a href="//twitter.com/{{ site.owner.twitter }}/">twitter.com/{{ site.owner.twitter }}</a></li>
-      {% endif %}
-      {% if site.owner.gnusocial %}
-        <li><a href="//{{ site.owner.gnusocial }}/">{{ site.owner.gnusocial }}</a></li>
-      {% endif %}
-      </ul>
-    </section>
-    <aside class="rss">
-      <a href="/atom.xml">
-        <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
-      </a>
-    </aside>
-  </footer>
+    <footer class="site-footer">
+        <a class="subscribe icon-feed" href="{{ site.baseurl }}rss.xml"><span class="tooltip">Subscribe!</span></a>
+        <div class="inner">
+             <section class="copyright">All content copyright <a href="{{ site.baseurl }}">{{ site.name }}</a> &copy; {{date format="YYYY"}} &bull; All rights reserved.</section>
+             <section class="poweredby">Made with Jekyll</section>
+        </div>
+    </footer>
+
+    
+    <script type="text/javascript" src="/assets/js/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="/assets/js/jquery.fitvids.js"></script>
+    <script type="text/javascript" src="/assets/js/index.js"></script>
+
+    <!-- Google Analytics Tracking code -->
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-XXXXXXXX-X']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>   
 </body>
 </html>
