--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,15 @@
     <!-- Customisation  -->
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
 
+
+{% if page.excerpt %}
+    <!-- Twitter cards -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@{{ site.twitter }}" />
+    <meta name="twitter:title" content="{{ page.title }}">
+    <meta name="twitter:url" content="//{{ site.url }}{{ page.url }}">
+    <meta name="twitter:description" content="{{ page.excerpt | strip_html | truncate: 200 }}">
+{% endif %}
 </head>
 <body class="home-template">
 
