Layout updates. Fix HTML headers & feeds

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,7 +42,7 @@ cover: false
                 	<header> <a href="{{ site.baseurl }}"> <img class="profile" src="/assets/images/me.jpg" alt="Author's profile picture"></a></header>
                 	<article>
                 		<!-- Author Name -->
-                    	<h4>{{ site.author.fullname }}</h4>
+                    	<h4>{{ site.author.name }}</h4>
                     	<!-- Author Bio -->
                     	<p>{{ site.author.bio }}</p>
                     </article>
