--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,39 +3,39 @@
 <head>   
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="googlebot" content="{% if page.meta.robots %}{{ page.meta.robots | join: ',' }}{% else %}index,follow{% endif %}" />
+    <meta name="robots" content="{% if page.meta.robots %}{{ page.meta.robots | join: ',' }}{% else %}index,follow{% endif %}" />
 
     <title>{{ site.name }} - {{ site.description }}</title>
-    <meta name="description" content="{{ site.meta_description}}" />
+    {% if page.meta.keywords %}<meta name="keywords" content="{{ page.meta.keywords | join: ',' }}" />{%endif %}
+    <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 200 }}{% else %}{{ site.meta_description}}{% endif %}" />
+    <meta name="author" content="{{ site.author.name }}" />
+    <meta name="copyright" content="All content copyright {{ site.author.name }} © • All rights reserved." />
 
     <meta name="HandheldFriendly" content="True" />
     <meta name="MobileOptimized" content="320" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" type="text/css" href="/assets/css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/css/screen.css" />
-    <!-- This is for syntax highlight -->
-    <link rel="stylesheet" type="text/css" href="/assets/css/syntax.css">
-    <!-- Customisation  -->
-    <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
+    {% css_asset_tag global %}
+    - /_assets/css/normalize.css
+    - /_assets/css/screen.css
+    - /_assets/css/syntax.css
+    - /_assets/css/main.css{% endcss_asset_tag %}
     <link rel="alternate" type="application/atom+xml" title="Blog-notes au format Atom 1.0" href="{% page_feed_url %}" />
 
-
-{% if page.excerpt %}
-    <!-- Twitter cards -->
+{% if page.excerpt %}    <!-- Twitter cards -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:creator" content="@{{ site.twitter }}" />
     <meta name="twitter:title" content="{{ page.title }}">
     <meta name="twitter:url" content="//{{ site.url }}{{ page.url }}">
-    <meta name="twitter:description" content="{{ page.excerpt | strip_html | strip_newlines | truncate: 200 }}">
-{% endif %}
+    <meta name="twitter:description" content="{{ page.excerpt | strip_html | strip_newlines | truncate: 200 }}">{% endif %}
 </head>
 <body class="home-template">
-
 <header class="site-head" {% if page.cover %} style="background-image: url({{ page.cover }})"{% endif %}>
     <div class="vertical">
-        <div class="site-head-content" class="inner">
+        <div class="site-head-content">
             {% if page.logo %}
-            <a class="blog-logo" href="{{ site.baseurl }}"><img src="{{ page.logo }}" alt="Blog Logo" /></a>
+		<a class="blog-logo" href="{{ site.baseurl }}"><img src="{{ page.logo }}" alt="Blog Logo" /></a>
             {% endif %}
             <h1 class="blog-title">{{ site.name }}</h1>
             <h2 class="blog-description">{{ site.description }}</h2>
