--- a/_assets/css/screen.css
+++ b/_assets/css/screen.css
@@ -31,16 +31,18 @@
 /* Import the font file with the icons in it */
 @font-face {
     font-family: 'icons';
-    src:url('../fonts/icons.eot');
-    src:url('../fonts/icons.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/icons.woff') format('woff'),
-        url('../fonts/icons.ttf') format('truetype'),
-        url('../fonts/icons.svg#icons') format('svg');
+    src:url('/assets/fonts/icons.eot');
+    src:url('/assets/fonts/icons.eot?#iefix') format('embedded-opentype'),
+        url('/assets/fonts/icons.woff') format('woff'),
+        url('/assets/fonts/icons.ttf') format('truetype'),
+        url('/assets/fonts/icons.svg#icons') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 /* Apply these base styles to all icons */
+.icon-category:before,
+.icon-tag:before,
 .icon-ghost:before, 
 .icon-feed:before, 
 .icon-twitter:before, 
@@ -59,6 +61,12 @@
 
 /* Each icon is created by inserting the corret character into the 
    content of the :before pseudo element. Like a boss. */
+.icon-category:before {
+    content: "";
+}
+.icon-tag:before {
+    content: "\f02b";
+}
 .icon-ghost:before {
     content: "\e000";
 }
@@ -172,20 +180,12 @@ ul ol, ol ul {
 }
 
 dl dt {
-    float: left;
-    width: 180px;
-    overflow: hidden;
-    clear: left;
-    text-align: right;
-    text-overflow: ellipsis;
-    white-space: nowrap;
     font-weight: bold;
-    margin-bottom: 1em
 }
 
 dl dd {
-    margin-left: 200px;
-    margin-bottom: 1em
+    margin-bottom: 1em;
+    margin-left: 1em;
 }
 
 hr {
@@ -369,7 +369,7 @@ margin on the iframe, cause it breaks stuff. */
     position: relative;
     display: table;
     width: 100%;
-    height: 70%;
+    height: 50%;
     margin-bottom: 5rem;
     text-align: center;
     color: #fff;
@@ -379,7 +379,7 @@ margin on the iframe, cause it breaks stuff. */
 
 /* the image for the site header*/
 .site-head{
-    background-image: url('../images/background-header.jpg');
+    background-image: url('/assets/images/background-header.jpg');
     background-repeat: no-repeat;
     background-position: 50%;
 }
@@ -914,6 +914,10 @@ margin on the iframe, cause it breaks stuff. */
 
     h4 {
         font-size: 2.3rem;
+    }
+    dl dd {
+        margin-bottom: 0.5em;
+        margin-left: 0.5em;
     }
 
     .post-template .post {
