--- a/_layouts/group_index.html
+++ b/_layouts/group_index.html
@@ -1,6 +1,5 @@
 ---
 layout: default
-title: Home
 ---
 
 <main class="content" role="main">
@@ -13,9 +12,9 @@ title: Home
           {% endif %}
         {% endif %}
         <span class="page-number"> Page {{paginator.page}} de {{paginator.total_pages}} </span>
-        {% if paginator.next_page %} 
+        {% if paginator.next_page %}
         <a class="older-posts" href="/page{{ paginator.next_page }}/" title="Next Page">Anciens Posts &raquo;</a>
-        {% endif %} 
+        {% endif %}
     </nav>
 
     {% for post in paginator.posts %}
@@ -26,12 +25,30 @@ title: Home
         <section class="post-excerpt">
             {{ post.excerpt }}
         </section>
-	<aside class="post-meta">
-		<p>Posté le <time datetime="{{ post.date | date:"%Y-%m-%d" }}">{{ post.date | date_to_string }}</time>
-                {% if post.categories %}dans la catégorie&nbsp;{{ post.categories | category_links }}{% endif %}
-		par {% if post.author %}{{ post.author }}{% else %}{{ site.author.name }}{% endif %}</p>
-		{% if post.tags.size != 0 %}<p>tags:&nbsp;{{ post.tags | tag_links }}</p>{% endif %}
-	</aside>
+        <aside class="post-meta">
+                <p>Posté le <time datetime="{{ post.date | date:"%Y-%m-%d" }}">{{ post.date | date_to_string }}</time>
+                par {% if post.author %}
+                    {{ post.author }}
+                {% else %}
+                    {{ site.author.name }}
+                {% endif %}</p>
+                {% if post.categories != nil OR post.tags.size != 0 %}
+                    <ul>
+                    {% if post.categories %}
+                        <li>dans la catégorie
+                        {% for category in post.categories %}
+                            <a href="/categories/{{category}}/">{{category}}</a>
+                        {% endfor %}</li>
+                    {% endif %}
+                    {% if post.tags.size != 0 %}
+                        <li class='icon-tag'>tags:&nbsp;
+                        {% for tag in post.tags %}
+                            {{ tag | tag_link(class => 'icon-tag') }}
+                        {% endfor %}</li>
+                    {% endif %}
+                    </ul>
+                {% endif %}
+        </aside>
     </article>
     {% endfor %}
 
@@ -44,8 +61,8 @@ title: Home
           {% endif %}
         {% endif %}
         <span class="page-number"> Page {{paginator.page}} de {{paginator.total_pages}} </span>
-        {% if paginator.next_page %} 
+        {% if paginator.next_page %}
         <a class="older-posts" href="/page{{ paginator.next_page }}/" title="Next Page">Anciens Posts &raquo;</a>
-        {% endif %} 
+        {% endif %}
     </nav>
 </main>
