--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,8 @@
 </header>
     {{ content }}
     <footer class="site-footer">
-        <a class="subscribe icon-feed" href="{% page_feed_url %}"><span class="tooltip">Subscribe!</span></a>
+        <p><a class="subscribe icon-feed" href="{% page_feed_url %}"><span class="tooltip">Subscribe!</span></a></p>
+	<p>List of all <a href="/feeds.html">available feeds</a></p>
         <div class="inner">
              <section class="copyright">All content copyright <a href="{{ site.baseurl }}">{{ site.name }}</a> &copy; {{date format="YYYY"}} &bull; All rights reserved.</section>
              <section class="poweredby">Made with Jekyll</section>
