--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,24 +30,24 @@
     <meta name="twitter:url" content="//{{ site.url }}{{ page.url }}">
     <meta name="twitter:description" content="{{ page.excerpt | strip_html | strip_newlines | truncate: 200 }}">{% endif %}
 </head>
-<body class="home-template">
-<header class="site-head" {% if page.cover %} style="background-image: url({{ page.cover }})"{% endif %}>
-    <div class="vertical">
-        <div class="site-head-content">
-            {% if page.logo %}
-		<a class="blog-logo" href="{{ site.baseurl }}"><img src="{{ page.logo }}" alt="Blog Logo" /></a>
-            {% endif %}
-            <h1 class="blog-title">{{ site.name }}</h1>
-            <h2 class="blog-description">{{ site.description }}</h2>
+<body  class="{% if page.post_class != false %}{{page.post_class}}{% else %}home-template{% endif %}">
+    <header class="site-head {% if page.cover %}site-cover{% endif %}">
+        <div class="vertical">
+            <div class="site-head-content">
+                {% if page.logo %}
+		    <a class="blog-logo" href="{{ site.baseurl }}"><img src="{{ page.logo }}" alt="Blog Logo" /></a>
+                {% endif %}
+                <h1 class="blog-title">{{ site.name }}</h1>
+                <h2 class="blog-description">{{ site.description }}</h2>
+            </div>
         </div>
-    </div>
-</header>
+    </header>
     {{ content }}
     <footer class="site-footer">
         <p><a class="subscribe icon-feed" href="{% page_feed_url %}"><span class="tooltip">Subscribe!</span></a></p>
 	<p>List of all <a href="/feeds.html">available feeds</a></p>
         <div class="inner">
-             <section class="copyright">All content copyright <a href="{{ site.baseurl }}">{{ site.name }}</a> &copy; {{date format="YYYY"}} &bull; All rights reserved.</section>
+             <section class="copyright"><a href="{{ site.baseurl }}">{{ site.name }}</a> &copy; &bull; All rights reserved .</section>
              <section class="poweredby">Made with Jekyll</section>
         </div>
     </footer>
