--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,21 +3,18 @@ layout: default
 disqus: false
 archive: false
 cover: false
+post_class: post-template
 ---
 
 <main class="content" role="main">
     <article class="post">
         <header class="post-header">
             <h1 class="post-title">{{ page.title }}</h1>
-            <span class="post-meta">
-        	<time datetime="{{ page.date | date:"%d-%m-%Y" }}">{{ page.date | date_to_string }}</time>
-        	{% if page.categories %}
-        		dans
-	        	{% for category in page.categories %}
-            		    <a href="/categories/{{category}}/">{{category}}</a>
-	        	{% endfor %}
-	        {% endif %}
-       	    </span>
+            <aside class="post-meta">
+                <p class="post-meta"><time datetime="{{ post.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time>
+                {% if page.categories %}dans la catégorie&nbsp;{{ page.categories | category_links }}{% endif %}
+                {% if page.tags.size != 0 %}<br/>(tags:&nbsp;{{ page.tags | tag_links }}){% endif %}</p>
+            </aside>
 	</header>
 
         <section class="post-content">
