--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,9 +14,29 @@ post_class: post-template
                 <p class="post-meta"><time datetime="{{ post.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time>
                 {% if page.categories %}dans la catégorie&nbsp;{{ page.categories | category_links }}{% endif %}
                 {% if page.tags.size != 0 %}<br/>(tags:&nbsp;{{ page.tags | tag_links }}){% endif %}</p>
+                {% if site.author %}
+                <!--section class="author">
+                    <header> <a href="{{ site.baseurl }}"> <img class="profile" src="/assets/images/me.jpg" alt="Author's profile picture"></a></header>
+                    <article><h4>{{ site.author.name }}</h4><p>{{ site.author.bio }}</p></article>
+                </section -->
+                {% endif %}
+                <!-- section class="share">
+                    <h4>Share this post</h4>
+                    <a class="icon-twitter" href="http://twitter.com/share?text={{page.title}}&amp;url=http://{{site.url}}{{ page.url }}"
+                        onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
+                        <span class="hidden">Twitter</span>
+                    </a>
+                    <a class="icon-facebook" href="https://www.facebook.com/sharer/sharer.php?u=http://{{site.url}}{{page.url}}"
+                        onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
+                        <span class="hidden">Facebook</span>
+                    </a>
+                    <a class="icon-google-plus" href="https://plus.google.com/share?url=http://{{site.url}}{{page.url}}"
+                        onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
+                        <span class="hidden">Google+</span>
+                    </a>
+                </section -->
             </aside>
 	</header>
-
         <section class="post-content">
             {{content}}
         </section>
